lib/src/compiler/tests/testdata/errors/67.out
error[E001]: syntax error
 --> line:1:12
  |
1 | rule test {}
  |            ^ expecting `meta`, `strings` or `condition`, found `}`
  |